# business-card

./: Procfile  README.md  pyproject.toml  requirements.txt
business_card/: __init__.py
business_card/static/css/: style.css
business_card/templates/: index.html
